[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/crosshair.png" type="Texture" id=1]
[ext_resource path="res://Resources/GUI_Theme.tres" type="Theme" id=2]
[ext_resource path="res://HUD.gd" type="Script" id=3]
[ext_resource path="res://Assets/fonts/SF Distant Galaxy.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 4 )

[node name="HUD" type="Node2D"]
script = ExtResource( 3 )

[node name="WellDone" type="Node2D" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="WellDone"]
margin_left = 108.0
margin_top = 68.0
margin_right = 921.0
margin_bottom = 483.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WDLabel" type="Label" parent="WellDone/VBoxContainer"]
margin_right = 813.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "WELL DONE!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WDLabel2" type="Label" parent="WellDone/VBoxContainer"]
margin_top = 105.0
margin_right = 813.0
margin_bottom = 238.0
custom_fonts/font = SubResource( 1 )
text = "YOU HAVE COMPLETED
 THE GAME!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WDLabel3" type="Label" parent="WellDone/VBoxContainer"]
margin_top = 278.0
margin_right = 813.0
margin_bottom = 383.0
custom_fonts/font = SubResource( 2 )
text = "Prepare yourself 
for the next 
Highway Encounter!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Node2D" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver"]
margin_left = 106.0
margin_top = 176.0
margin_right = 919.0
margin_bottom = 591.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WDLabel" type="Label" parent="GameOver/VBoxContainer"]
margin_right = 813.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WDLabel3" type="Label" parent="GameOver/VBoxContainer"]
margin_top = 105.0
margin_right = 813.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 2 )
text = "PRESS FIRE TO RETURN"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InGame" type="Node2D" parent="."]

[node name="Reticule" type="TextureRect" parent="InGame"]
margin_left = 493.873
margin_top = 274.054
margin_right = 749.873
margin_bottom = 530.054
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="InGame"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = 1016.0
margin_bottom = 594.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="InGame"]
margin_left = 237.104
margin_top = 556.014
margin_right = 796.104
margin_bottom = 596.014
custom_constants/separation = 80
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZoneLabel" type="Label" parent="InGame/HBoxContainer"]
margin_left = 22.0
margin_top = 1.0
margin_right = 90.0
margin_bottom = 38.0
theme = ExtResource( 2 )
text = "ZONE: 0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="InGame/HBoxContainer"]
margin_left = 170.0
margin_top = 11.0
margin_right = 232.0
margin_bottom = 28.0
theme = ExtResource( 2 )
text = "TIME: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="InGame/HBoxContainer"]
margin_left = 312.0
margin_top = 1.0
margin_right = 384.0
margin_bottom = 38.0
theme = ExtResource( 2 )
text = "AMMO: 0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesLabel" type="Label" parent="InGame/HBoxContainer"]
margin_left = 464.0
margin_top = 1.0
margin_right = 536.0
margin_bottom = 38.0
theme = ExtResource( 2 )
text = "AMMO: 0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPSLabel" type="Label" parent="."]
visible = false
margin_left = 15.119
margin_top = 13.8591
margin_right = 55.119
margin_bottom = 27.8591
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="DebugMode" type="Label" parent="."]
visible = false
margin_left = 915.962
margin_top = 18.8988
margin_right = 1009.96
margin_bottom = 32.8988
text = "DEBUG MODE!"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
